--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<i class="bi bi-x-circle-fill"></i>
 						</div>
 						<iframe class="game-iframe lazyload" id="game-area"
-						        data-src="https://ubggo.github.io/ub-games/slope/" width="480" height="800"
+						        data-src="https://edufall.github.io/o2/slope" width="480" height="800"
 						        scrolling="none" frameborder="0" allowfullscreen=""></iframe>
 					</div>
 				</div>
