--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<i class="bi bi-x-circle-fill"></i>
 						</div>
 						<iframe class="game-iframe lazyload" id="game-area"
-						        data-src="https://edufall.github.io/o2/slope" width="800" height="480"
+						        data-src="https://eggy-car.github.io/game9/slope/" width="800" height="480"
 						        scrolling="none" frameborder="0" allowfullscreen=""></iframe>
 					</div>
 				</div>
