--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
 						<div id="mobile-back-button" draggable="true">
 							<i class="bi bi-x-circle-fill"></i>
 						</div>
-						<iframe class="game-iframe lazyload" id="game-area"
-						        data-src="https://3kh0s.github.io/games/slope/index.html" width="800" height="480"
-						        scrolling="none" frameborder="0" allowfullscreen=""></iframe>
+						<iframe class="game-iframe lazyload" id="game-area" src="https://3kh0s.github.io/games/slope/index.html" width="800" height="480" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
 					</div>
 				</div>
 				<div class="game-info">
