--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<div id="mobile-back-button" draggable="true">
 							<i class="bi bi-x-circle-fill"></i>
 						</div>
-						<iframe class="game-iframe lazyload" id="game-area" src="https://eggy-car.github.io/game9/slope/" width="800" height="480" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
+						<iframe class="game-iframe lazyload" id="game-area" src="https://macvg-games.github.io/action-games/slope/" width="800" height="480" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
 					</div>
 				</div>
 				<div class="game-info">
